UINTRA2-246 max two pictures for mobile + fixed positioning of attachments on mobile

--- a/src/Uintra20/Content/uintra20/src/app/ui/panels/central-feed/central-feed-publication/central-feed-publication.component.less
+++ b/src/Uintra20/Content/uintra20/src/app/ui/panels/central-feed/central-feed-publication/central-feed-publication.component.less
@@ -80,6 +80,8 @@
 
     &__footer {
         display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
         align-items: center;
 
         &-item {
@@ -103,11 +105,13 @@
                 color: @link-color;
             }
         }
+
+      &-left-block {
+        display: flex;
+      }
     }
 
     &__files {
-        margin-left: auto;
-
         .icon-attachment {
             font-size: 1.6em;
             line-height: 15px;
